[package]
name = "yaml-navigator"
version = "0.1.0"
description = "A library for writing and running queries against YAML"
homepage = "https://github.com/felipesere/yaml-navigator"
repository = "https://github.com/felipesere/yaml-navigator"
readme = "README.md"

edition = "2021"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gat-lending-iterator = "0.1"
serde = "1"
serde_yaml = "0.9"
tracing = "0.1"

[dev-dependencies]
indoc = "2"
tracing-test = "0.2"
expect-test = "1"
